{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 11,
  "lineage": "2700c6b4-9443-d768-8ece-03438f4bd7c6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myfirstec2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03746875d916becc0",
            "arn": "arn:aws:ec2:eu-west-1:069818277826:instance/i-00085d4a7498a18b7",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-00085d4a7498a18b7",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "myec2key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0028548f86e8ae4f6",
            "private_dns": "ip-10-1-0-71.eu-west-1.compute.internal",
            "private_ip": "10.1.0.71",
            "public_dns": "ec2-34-255-208-74.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.255.208.74",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-04dd0f383dea95d51",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07e0c2b41aaa84688",
            "tags": {
              "Environment": "development"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04de24202bb46ab60"
            ]
          },
          "depends_on": [
            "aws_security_group.ssh_access",
            "aws_subnet.subnet_public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0281ef3d1b8ae00b2",
            "owner_id": "069818277826",
            "tags": {
              "Environment": "development"
            },
            "vpc_id": "vpc-0a184f4cc46cb1156"
          },
          "depends_on": [
            "aws_vpc.practice_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0315f6e4da5b8defe",
            "owner_id": "069818277826",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0281ef3d1b8ae00b2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "development"
            },
            "vpc_id": "vpc-0a184f4cc46cb1156"
          },
          "depends_on": [
            "aws_internet_gateway.igw",
            "aws_vpc.practice_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_subnet_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0404bdcb699a85c4f",
            "route_table_id": "rtb-0315f6e4da5b8defe",
            "subnet_id": "subnet-07e0c2b41aaa84688"
          },
          "depends_on": [
            "aws_route_table.rtb_public",
            "aws_subnet.subnet_public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:069818277826:security-group/sg-04de24202bb46ab60",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04de24202bb46ab60",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh_access",
            "name_prefix": null,
            "owner_id": "069818277826",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "development"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a184f4cc46cb1156"
          },
          "depends_on": [
            "aws_vpc.practice_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:069818277826:subnet/subnet-07e0c2b41aaa84688",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.1.0.0/24",
            "id": "subnet-07e0c2b41aaa84688",
            "map_public_ip_on_launch": true,
            "owner_id": "069818277826",
            "tags": {
              "Environment": "development"
            },
            "vpc_id": "vpc-0a184f4cc46cb1156"
          },
          "depends_on": [
            "aws_vpc.practice_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "practice_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:069818277826:vpc/vpc-0a184f4cc46cb1156",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-06518eb2eeab7faa2",
            "default_route_table_id": "rtb-090f579763b732f0f",
            "default_security_group_id": "sg-04f797020e20e7f14",
            "dhcp_options_id": "dopt-5a30ba3c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a184f4cc46cb1156",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-090f579763b732f0f",
            "owner_id": "069818277826",
            "tags": {
              "Environment": "development"
            }
          }
        }
      ]
    }
  ]
}